--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,11 +1,11 @@
-/* Custom Stylesheet */
-/**
- * Use this file to override Materialize files so you can update
- * the core Materialize files in the future
- *
- * Made By MaterializeCSS.com
- */
-
+.icon{
+  width: 100%;
+  height: 120px;
+  background-image: url('../images/icon.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 nav ul a,
 nav .brand-logo {
   color: #444;
@@ -20,7 +20,7 @@ p {
 }
 
 .parallax-container {
-  min-height: 380px;
+  min-height: 480px;
   line-height: 0;
   height: auto;
   color: rgba(255,255,255,.9);
