--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -59,4 +59,18 @@ footer.page-footer {
 .icon-block .material-icons{
   color: blueviolet!important;
   font-size: 80px;
+  text-shadow: 0px 0px 2px white;
+}
+
+.feature {
+  color: blueviolet;
+  font-weight: bold;
+  text-shadow: 0px 0px 1px rgb(0, 0, 0);
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px black;
+  font-family: 'Consolas', monospace;
+  width: auto;
+  line-height: 70px;
 }
