--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -20,7 +20,7 @@ p {
 }
 
 .parallax-container {
-  min-height: 480px;
+  min-height: 80vh;
   line-height: 0;
   height: auto;
   color: rgba(255,255,255,.9);
@@ -73,4 +73,10 @@ footer.page-footer {
   font-family: 'Consolas', monospace;
   width: auto;
   line-height: 70px;
+}
+
+@media screen and (max-width: 600px) {
+  .hidesmall{
+    display: none;
+  }
 }
