--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,11 +1,16 @@
 .icon{
-  width: 100%;
+  width: 120px;
   height: 120px;
   background-image: url('../images/icon.png');
-  background-size: contain;
+  background-size: 117%;
   background-position: center;
   background-repeat: no-repeat;
+  box-shadow: 0px 0px 10px black;
+  margin:auto;
+  border-radius: 30px;
+  border: 5px solid blueviolet;
 }
+
 nav ul a,
 nav .brand-logo {
   color: #444;
