--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -90,3 +90,49 @@ footer.page-footer {
 .blursection{
   filter:blur(1.2px);
 }
+
+.typewriter {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 0.15em solid orange;
+  animation: typing 3.5s steps(30, end), blink-caret 0.75s step-end 4;
+  animation-fill-mode: forwards;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  99.9% {
+    width: 100%;
+  }
+  to {
+    width: "auto";
+  }
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .header {
+    font-size: 2em !important;
+  }
+
+  .typewriter {
+    font-size: 1.5em !important;
+  }
+
+  .btn-large {
+    font-size: 1em !important;
+    padding: 0 1rem !important;
+  }
+}
