efficient net works

--- a/docs/testing/style.css
+++ b/docs/testing/style.css
@@ -149,3 +149,31 @@ section {
 .select-wrapper input.select-dropdown {
   color: #fff;
 }
+
+#overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.96);
+  z-index: 2;
+  cursor: pointer;
+  text-align: center;
+}
+
+.icon {
+  width: 120px;
+  height: 120px;
+  background-image: url('../images/icon.png');
+  background-size: 117%;
+  background-position: center;
+  background-repeat: no-repeat;
+  box-shadow: 0px 0px 10px black;
+  margin: auto;
+  border-radius: 30px;
+  border: 5px solid blueviolet;
+  margin-top: 10px;
+}
